--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+ <!DOCTYPE html>
+<html lang=”pt-br”>
+        <head>
+                <meta charset=”UTF-8”>
+        <title>Negacionismo Cientifico</title>
+  </head>
 
+ <body>
+           <header>
+                       <h1 class=”titulo-principal”>Negacionismo Cientifico</h1>
+</headeer>
+
+<div class=”principal”>
+      <h2 class=”titulo-centralizado”>sobra a Negacionismo Cientifico</h2>
+<h>Sobre a Negacionismo Cientifico</h>
+ 
+  <p>Ja o negacionismo e um fenomeno psicol[ogico <strong>eventualmente,social</strong> Nao se trata de uma filosofica perante o mundo. os negacionistas rejeitam crencas consensualmente aceitas, como teorias científicas fortemente corroboradas, experimentos inquestionáveis e previsões muito bem amparadas. Dois exemplos clássicos são o "terraplanismo" e a negação do aquecimento global. Eles não se apoiam em teorias científicas, não se apoiam em interpretações alternativas para os mesmos dados observacionais, mas apenas em desinformação e mentiras. 
+<strong>Ou seja, duvidar é legítimo, desde que não se desconsidere ou desobedeça às normas que regem o comportamento coletivo, quando são racionais e justas...</strong>
+</p>
+ 
+<pid=”negacionismo”><em> tambem: <strong>"O negacionista é aquele que simplesmente não aceita uma ideia, juízo ou fato apresentado por uma comunidade científica, acadêmica ou filosófica como verdadeiro. Normalmente, os juízos e ideais apresentados por tais autoridades intelectuais resultam de análises mais acuradas e metódicas de suas áreas e são aclamados pelos membros dessas comunidades intelectuais até serem aceitos por convenção.Não importa o nível de validade científica ou a profundidade da argumentação apresentada, a mente negacionista simplesmente se recusa a aceitar como verdadeiros os fatos científicos. </strong>.</em></p>
+ 
+<p>filósofo judeu holandês Baruch de Espinosa distinguiu três gêneros do conhecimento, sendo eles:
+<strong>imaginação,
+razão e
+intuição.</strong>
+  "Veja mais sobre "O que é negacionismo?" em: https://brasilescola.uol.com.br/o-que-e/o-que-e-sociologia/o-que-e-negacionismo.htm
+</p>
+  <title>Tipos de Negacionismo:</title>
+  <p>Negacionismo <strong>histórico.</strong>
+    Negacionismo <strong>climático.</strong>
+    Negacionismo da <strong>evolução.</strong>
+    Negacionismo do <strong>Holocausto.</strong>
+    </body>
+</html>
+ 
+ 
+<tag>
