--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <h2 class=”titulo-centralizado”>sobra a Negacionismo Cientifico</h2>
 <h>Sobre a Negacionismo Cientifico</h>
  
+  <p>Hendrick 16  Allison 02
+   
   <p>Ja o negacionismo e um fenomeno psicol[ogico <strong>eventualmente,social</strong> Nao se trata de uma filosofica perante o mundo. os negacionistas rejeitam crencas consensualmente aceitas, como teorias científicas fortemente corroboradas, experimentos inquestionáveis e previsões muito bem amparadas. Dois exemplos clássicos são o "terraplanismo" e a negação do aquecimento global. Eles não se apoiam em teorias científicas, não se apoiam em interpretações alternativas para os mesmos dados observacionais, mas apenas em desinformação e mentiras. 
 <strong>Ou seja, duvidar é legítimo, desde que não se desconsidere ou desobedeça às normas que regem o comportamento coletivo, quando são racionais e justas...</strong>
 </p>
